--- a/templates/includes/author_card.html
+++ b/templates/includes/author_card.html
@@ -1,23 +1,23 @@
-    <div class="card-user" data-author="700">
-        <div class="card-user__header">
-            <h2 class="card-user__title">{{ author.get_full_name }}</h2>
-        </div>
-        <div class="card-user__body">
-            <ul class="card-user__items">
-                {% for recipe in author.recipes.all|slice:":3" %}
-                <li class="card-user__item">
-                    <div class="recipe">
-                        <img src="{{ recipe.image.url }}" alt="какой-то-текст" class="recipe__image">
-                        <h3 class="recipe__title">{{ recipe.title }}</h3>
-                        <p class="recipe__text"><span class="icon-time"></span> {{ recipe.cooking_time_minutes }} мин.</p>
-                    </div>
-                {% endfor %}
-                <li class="card-user__item">
-                    <a href="/author/{{ author.username }}" class="card-user__link link">Еще {{ author.recipes.all|slice:"3:"|length }} рецептов...</a>
-                </li>
-            </ul>
-        </div>
-        <div class="card-user__footer">
-            <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
-        </div>
-    </div>
+<div class="card-user" data-author="{{ author.id }}">{% csrf_token %}
+  <div class="card-user__header">
+    <h1 class="card-user__title"><a href="{% url 'profile' author.username %}" class="card__title link" style="color: black">{{ author.get_full_name }}</a></h1>
+  </div>
+  <div class="card-user__body">
+    <ul class="card-user__items">
+      {% for recipe in author.recipes.all|slice:":3" %}
+        <li class="card-user__item">
+          <div class="recipe">
+            <img src="{{ recipe.image.url }}" alt="какой-то-текст" class="recipe__image">
+            <h3 class="recipe__title"><a href="{% url 'recipe_detail' recipe.id %}" class="nav__link link">{{ recipe.title }}</a></h3>
+            <p class="recipe__text"><span class="icon-time"></span> {{ recipe.cooking_time_minutes }} мин.</p>
+          </div>
+      {% endfor %}
+      <li class="card-user__item">
+        <a href="{% url 'profile' author.username %}" class="card-user__link link">Еще {{ author.recipes.all|slice:"3:"|length }} рецептов...</a>
+      </li>
+    </ul>
+  </div>
+  <div class="card-user__footer">
+    {% include 'includes/subscription_button.html' %}
+  </div>
+</div>
