--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -23,8 +23,8 @@
         </li>
       </ul>
       <ul class="nav__items list">
-        <li class="nav__item"><a href="{% url 'profile' user.username %}" class="nav__link link">{{ user.get_full_name }}</a></li>
-        <li class="nav__item"><a href="{% url 'password_change' %}" class="nav__link link">Поменять пароль</a></li>
+        <li class="nav__item"><a href="{% url 'profile' user.username %}" class="nav__link link" style="color: #4A61DD">{{ user.get_full_name }}</a></li>
+        <li class="nav__item"><a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
         <li class="nav__item"><a href="{% url 'logout' %}" class="nav__link link">Выход</a></li>
       </ul>
     {% else %}
