--- a/templates/includes/subscription_button.html
+++ b/templates/includes/subscription_button.html
@@ -1,8 +1,10 @@
-{% if user.is_authenticated and user != author %}
-  {% load recipes_custom_filters %}{% csrf_token %}
-  {% if request|request_user_subscriptions:author %}
-    <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться от автора</button>
-  {% else %}
-    <button class="button button_style_light-blue button_size_auto button_style_blue" name="subscribe" data-out>Подписаться на автора</button>
+{% if user.is_authenticated %}
+  {% if user != author %}
+    {% load recipes_custom_filters %}{% csrf_token %}
+    {% if request|request_user_subscriptions:author %}
+      <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться от автора</button>
+    {% else %}
+      <button class="button button_style_light-blue button_size_auto button_style_blue" name="subscribe" data-out>Подписаться на автора</button>
+    {% endif %}
   {% endif %}
 {% endif %}
