--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -26,7 +26,7 @@
     </div>
     <ul class="single-card__items">
       <li class="single-card__item">{% include 'includes/purchase_button_single.html' %}</li>
-      <li class="single-card__item">{% include 'includes/subscription_button.html' %}</li>
+      <li class="single-card__item">{% include 'includes/subscription_button.html' with author=recipe.author %}</li>
     </ul>
     <div class="single-card__section">
       <h3 class="single-card__section-title">Ингридиенты:</h3>
