--- a/templates/users/purchase_list.html
+++ b/templates/users/purchase_list.html
@@ -10,8 +10,8 @@
       {% for purchase in object_list %}
         <li class="shopping-list__item" data-id="{{ purchase.recipe.id }}">
           <div class="recipe recipe_reverse">
-            <a href="{% url 'recipes:detail' purchase.recipe.id %}" style="grid-area: image"><img href="{% url 'recipes:detail' purchase.recipe.id %}" src="{{ purchase.recipe.image.url }}" alt="{{ purchase.recipe.title }}" class="recipe__image recipe__image_big"></a>
-            <h3 class="recipe__title"><a href="{% url 'recipes:detail' purchase.recipe.id %}" class="nav__link link">{{ purchase.recipe.title }}</a></h3>
+            <a href="{% url 'recipes:recipe_detail' purchase.recipe.id %}" style="grid-area: image"><img href="{% url 'recipes:recipe_detail' purchase.recipe.id %}" src="{{ purchase.recipe.image.url }}" alt="{{ purchase.recipe.title }}" class="recipe__image recipe__image_big"></a>
+            <h3 class="recipe__title"><a href="{% url 'recipes:recipe_detail' purchase.recipe.id %}" class="nav__link link">{{ purchase.recipe.title }}</a></h3>
             <p class="recipe__text"><span class="icon-time"></span> {{ purchase.recipe.cooking_time_minutes }} мин.</p>
           </div>
           <a href="#" class="shopping-list__button link">Удалить</a>
